デザインを修正

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -4,6 +4,4 @@
 
 <br>
 
-<div>
-  <%= link_to t('books.back'), books_path %>
-</div>
+<nav class="page-nav"><%= link_to t('books.back'), books_path %></nav>
