--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @book %>
+<div class="show-item"><%= render @book %></div>
 
-<div>
+<nav class="page-nav">
   <%= link_to t('books.edit'), edit_book_path(@book) %> |
   <%= link_to t('books.back'), books_path %>
-
   <%= button_to t('books.destroy'), @book, method: :delete %>
-</div>
+</nav>
