--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,4 +19,6 @@
     <%= link_to t('views.common.new', name: Book.model_name.human.downcase), new_book_path %>
     <%= link_to t('views.devise.sign_out'), destroy_account_session_path, data: { turbo_method: :delete } %>
     <%= link_to t('views.devise.edit_account'), edit_account_registration_path %>
+    <%= link_to 'プロフィールの編集', 'profile/edit' %>
+    <%= link_to 'ユーザ一覧', 'book_users' %>
 </nav>
