--- a/app/views/book_users/edit.html.erb
+++ b/app/views/book_users/edit.html.erb
@@ -2,19 +2,21 @@
 <%= form_for(@book_user, url:{controller:'book_users', action:'update'}) do |f| %>
 <div>
     <label for="name">ユーザーネーム</label>
-    <%= f.text_field :name %> 
+    <%= f.text_field :name %>
 </div>
 <div>
     <label for="postal_code">郵便番号</label>
-        <%= f.text_field :postal_code %> 
+    <%= f.text_field :postal_code %>
 </div>
 <div>
     <label for="address">住所</label>
-    <%= f.text_field :address %> 
+    <%= f.text_field :address %>
 </div>
 <div>
     <label for="self_introduction">自己紹介</label>
-    <%= f.text_area :self_introduction %> 
+    <%= f.text_area :self_introduction %>
 </div>
 <%= f.submit "更新" %>
 <% end %>
+<hr>
+<%= link_to '戻る', '/books' %>
