--- a/app/views/book_users/index.html.erb
+++ b/app/views/book_users/index.html.erb
@@ -1,2 +1,7 @@
-<h1>BookUsers#index</h1>
-<p>Find me in app/views/book_users/index.html.erb</p>
+<h1>ユーザ一覧</h1>
+<% @book_users.each do |book_user| %>
+<div><a href="/book_users/<%= book_user.account_id %>"><%= book_user.name %></a>
+</div>
+<% end %>
+<hr>
+<%= link_to '戻る', '/books' %>
