--- a/app/views/book_users/index.html.erb
+++ b/app/views/book_users/index.html.erb
@@ -3,5 +3,7 @@
 <div><a href="/book_users/<%= book_user.account_id %>"><%= book_user.name %></a>
 </div>
 <% end %>
+<br>
+<div><%= paginate @book_users %></div>
 <hr>
 <%= link_to '戻る', '/books' %>
