--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,24 @@
-<h2><%= t('views.devise.change_pw') %></h2>
+<h2><%= t('views.common.title_edit', name: Account.human_attribute_name(:password)) %></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
-    <%= f.label :password, t('views.devise.new_pw') %><br />
+    <%= f.label :password, Account.human_attribute_name(:new_password) %><br />
     <% if @minimum_password_length %>
-      <em><%= "#{@minimum_password_length}#{t('views.devise.min_pw_size')}" %></em><br />
+      <em><%= Account.human_attribute_name(:password) %><%= t('errors.messages.too_short', count: @minimum_password_length) %></em><br />
     <% end %>
     <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, t('views.devise.pw_confirmation') %><br />
+    <%= f.label :password_confirmation, Account.human_attribute_name(:password_confirmation) %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit t('views.devise.change') %>
+    <%= f.submit t('views.devise.change_pw') %>
   </div>
 <% end %>
 
