--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,8 @@
 <div id="<%= dom_id user %>">
 
   <p>
+    <%= image_tag user.avatar.variant(resize_to_fit: [100, 100]).processed %></p>
+  <p>
     <strong><%= User.human_attribute_name(:email) %>:</strong>
     <%= user.email %>
   </p>
