--- a/app/views/book_comments/show.html.erb
+++ b/app/views/book_comments/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @book_comment %>
 
 <div>
-  <%= link_to "Edit this book comment", edit_book_comment_path(@book_comment) %> |
-  <%= link_to "Back to book comments", book_comments_path %>
+  <% if current_user == @book_comment.user %>
+    <%= link_to "Edit this book comment", edit_book_comment_path(@book_comment) %> |
+  <% end %>
 
+  <%= link_to "Back to book comments", book_comments_path %>
   <%= button_to "Destroy this book comment", @book_comment, method: :delete %>
 </div>
