詳細画面で本のコメントを表示

--- a/app/views/book_comments/edit.html.erb
+++ b/app/views/book_comments/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing book comment</h1>
 
-<%= render "form", book_comment: @book_comment %>
+<%= render "form", book_comment: @book_comment, book: @book_comment.book %>
 
 <br>
 
