--- a/app/views/book_comments/show.html.erb
+++ b/app/views/book_comments/show.html.erb
@@ -6,7 +6,8 @@
   <% if current_user == @book_comment.user %>
     <%= link_to "Edit this book comment", edit_book_comment_path(@book_comment) %> |
   <% end %>
-
-  <%= link_to "Back to book comments", book_comments_path %>
-  <%= button_to "Destroy this book comment", @book_comment, method: :delete %>
+  <%= link_to "Back", book_path(@book_comment.book) %>
+  <% if current_user == @book_comment.user %>
+    <%= button_to "Destroy this book comment", @book_comment, method: :delete %>
+  <% end %>
 </div>
