--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,9 +4,19 @@
   <%= render @book %>
 </div>
 
+<div id="book_comments">
+  <% @book.book_comment.each do |book_comment| %>
+    <%= render book_comment %>
+    <p>
+      <%= link_to "Show this book comment", book_comment %>
+    </p>
+  <% end %>
+</div>
+
 <nav class="page-nav">
   <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_book_path(@book) %> |
   <%= link_to t('views.common.back', name: i18n_pluralize(Book.model_name.human.downcase)), books_path %>
+  <%= link_to "New book comment", new_book_comment_path(book_id:@book.id) %>
 
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
