--- a/app/views/report_comments/_form.html.erb
+++ b/app/views/report_comments/_form.html.erb
@@ -12,13 +12,11 @@
   <% end %>
 
   <div>
-    <%= form.label :report_id, style: "display: block" %>
-    <%= form.number_field :report_id %>
+    <%= form.hidden_field :report_id, value: @report.id %>
   </div>
 
   <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.number_field :user_id %>
+    <%= form.hidden_field :user_id, value: current_user.id %>
   </div>
 
   <div>
