--- a/app/views/report_comments/new.html.erb
+++ b/app/views/report_comments/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New report comment</h1>
 
-<%= render "form", report_comment: @report_comment %>
+<%= render "form", report_comment: @report_comment, report:@report %>
 
 <br>
 
