--- a/app/views/report_comments/_report_comment.html.erb
+++ b/app/views/report_comments/_report_comment.html.erb
@@ -1,16 +1,11 @@
 <div id="<%= dom_id report_comment %>">
   <p>
-    <strong>Report:</strong>
-    <%= report_comment.report_id %>
+    <strong><%= User.human_attribute_name(:name) %>:</strong>
+    <%= report_comment.user.name %>
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= report_comment.user_id %>
-  </p>
-
-  <p>
-    <strong>Content:</strong>
+    <strong><%= ReportComment.human_attribute_name(:content) %></strong>
     <%= report_comment.content %>
   </p>
 
