--- a/app/views/report_comments/edit.html.erb
+++ b/app/views/report_comments/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing report comment</h1>
+<h1><%= t('views.common.title_edit', name: ReportComment.model_name.human.downcase) %></h1>
 
 <%= render "form", report_comment: @report_comment %>
 
 <br>
 
 <div>
-  <%= link_to "Show this report comment", @report_comment %> |
-  <%= link_to "Back to report comments", report_comments_path %>
+  <%= link_to t('views.common.show', name: i18n_pluralize(ReportComment.model_name.human.downcase)), @report_comment %> |
+  <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
 </div>
