--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,17 +1,17 @@
 <div id="<%= dom_id report %>">
   <p>
-    <strong>Title:</strong>
+    <strong><%= Report.human_attribute_name(:title) %></strong>
     <%= report.title %>
   </p>
 
   <p>
-    <strong>Content:</strong>
-    <%= report.content %>
+    <strong><%= User.human_attribute_name(:name) %></strong>
+    <%= report.user.name %>
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= report.user_id %>
+    <strong><%= Report.human_attribute_name(:content) %></strong>
+    <%= report.content %>
   </p>
 
 </div>
