--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Reports</h1>
+<h1><%= t('views.common.title_index', name: i18n_pluralize(Report.model_name.human)) %></h1>
 
 <div id="reports">
   <% @reports.each do |report| %>
@@ -14,10 +14,7 @@
   <div>
     <time><%= report.created_at %></time>
   </div>
-    <p>
-      <%= link_to "Show this report", report %>
-    </p>
   <% end %>
 </div>
 
-<%= link_to "New report", new_report_path %>
+<%= link_to t('views.common.new', name: Report.model_name.human.downcase), new_report_path %>
