--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,21 +4,21 @@
 
 <div>
   <% if current_user == @report.user %>
-    <%= link_to "Edit this report", edit_report_path(@report) %> |
+      <%= link_to t('views.common.edit', name: i18n_pluralize(Report.model_name.human.downcase)), edit_report_path %>|
   <% end %>
-  <%= link_to "Back to reports", reports_path %>
+  <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
   <% if current_user == @report.user %>
-    <%= button_to "Destroy this report", @report, method: :delete %>
+    <%= button_to t('views.common.destroy', name: i18n_pluralize(Report.model_name.human.downcase)), @report, method: :delete %>
   <% end %>
 </div>
 
-<%= link_to "New report comment", new_report_comment_path(report_id:@report.id) %>
+<%= link_to t('views.common.new', name: ReportComment.model_name.human.downcase), new_report_comment_path(report_id:@report.id) %>
 
 <div id="report_comments">
   <% @report.report_comment.each do |report_comment| %>
     <%= render report_comment %>
     <p>
-      <%= link_to "Show this report comment", report_comment %>
+      <%= link_to t('views.common.show', name: ReportComment.model_name.human.downcase), report_comment %>
     </p>
   <% end %>
 </div>
