--- a/app/views/book_comments/show.html.erb
+++ b/app/views/book_comments/show.html.erb
@@ -4,10 +4,10 @@
 
 <div>
   <% if current_user == @book_comment.user %>
-    <%= link_to "Edit this book comment", edit_book_comment_path(@book_comment) %> |
+    <%= link_to t('views.common.edit', name: BookComment.model_name.human.downcase), edit_book_comment_path(@book_comment) %> |
   <% end %>
-  <%= link_to "Back", book_path(@book_comment.book) %>
+  <%= link_to t('views.common.back', name: BookComment.model_name.human.downcase), book_path(@book_comment.book) %>
   <% if current_user == @book_comment.user %>
-    <%= button_to "Destroy this book comment", @book_comment, method: :delete %>
+    <%= button_to t('views.common.destroy', name: BookComment.model_name.human.downcase), @book_comment, method: :delete %>
   <% end %>
 </div>
