--- a/app/views/book_comments/edit.html.erb
+++ b/app/views/book_comments/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing book comment</h1>
+<h1><%= t('views.common.title_edit', name: BookComment.model_name.human.downcase) %></h1>
 
 <%= render "form", book_comment: @book_comment, book: @book_comment.book %>
 
