--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,7 +12,7 @@
     <%= link_to report.user.name, report.user %>
   </div>
   <div>
-    <time><%= report.created_at %></time>
+    <time><%= report.created_at.strftime(t('time.formats.long')) %></time>
   </div>
   <% end %>
 </div>
