日報のデザイン修正

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,12 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
 <h1><%= t('views.common.title_index', name: i18n_pluralize(Report.model_name.human)) %></h1>
 
 <div id="reports" class="report-list">
   <% @reports.each do |report| %>
       <div class="report-list-item">
         <div class="report-list-item_inner">
-          <div class="reports_header">
+          <div class="report_header">
             <div class="report_title"><h2><%= link_to report.title, report %></h2></div>
           </div>
           <div class="report_meta">
