--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -322,6 +322,7 @@ form input[type="submit"]:hover {
 
 time {
   color: #9f9fa8;
+  font-size: 12px;
 }
 
 .report-list {
@@ -340,6 +341,7 @@ time {
 
 .user_name {
   padding-right: 10px;
+  font-size: 12px;
 }
 
 .user_name > a {
@@ -353,4 +355,25 @@ time {
 .report_meta {
   display: flex;
   font-size: 12px;
+}
+
+.report-content-header {
+  margin-bottom: 20px;
+}
+
+.report-content-header h1 {
+  margin: 0;
+  font-size: 26px;
+  color: #4742c2;
+  border-bottom: 1px solid #d4d3d9;
+}
+
+.report-content-main {
+  border: 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.report-content {
+  margin-top: 10px;
 }
