--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,17 +1,14 @@
-<div id="<%= dom_id report %>">
-  <p>
-    <strong><%= Report.human_attribute_name(:title) %></strong>
-    <%= report.title %>
-  </p>
-
-  <p>
-    <strong><%= User.human_attribute_name(:name) %></strong>
-    <%= report.user.name %>
-  </p>
-
-  <p>
-    <strong><%= Report.human_attribute_name(:content) %></strong>
-    <%= report.content %>
-  </p>
-
+<div id="<%= dom_id report %>" class="report-content">
+  <div class="report-content-header">
+    <div class="user_name">
+      <%= link_to report.user.name, report.user %>
+    </div>
+    <h1><%= report.title %></h1>
+    <div class="report-content-meta">
+        <time><%= report.created_at.strftime(t('time.formats.long')) %></time>
+    </div>
+  </div>
+  <div class="report-content-main">
+    <p><%= safe_join(report.content.split("\n"),tag(:br)) %></p>
+  </div>
 </div>
