--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -370,10 +370,52 @@ time {
 
 .report-content-main {
   border: 1px solid;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 10px;
 }
 
 .report-content {
   margin-top: 10px;
+}
+
+.comment-box {
+  border: 1px solid #b3b2b5;
+  border-radius: 5px;
+  width: 40%;
+  margin: 20px 0;
+}
+
+.comment-box-header h2 {
+  margin: 0;
+  font-size: 14px;
+}
+
+.comment-box-header {
+  border-bottom: 1px solid #d4d3d9;
+  padding: 12px 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-box-main {
+  padding: 12px 16px;
+}
+
+.comment-box-footer {
+  border-top: 1px solid #d4d3d9;
+  padding: 12px 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-box-footer button {
+  background-color: inherit !important;
+  border: none !important;
+  color: #9f9fa8;
+  text-decoration: underline;
+}
+
+.comment-box-footer button:hover {
+  color: #dd2424;
+  text-decoration: none;
 }
