--- a/app/views/book_comments/_book_comment.html.erb
+++ b/app/views/book_comments/_book_comment.html.erb
@@ -1,11 +1,18 @@
-<div id="<%= dom_id book_comment %>">
-
-  <header class="comment_header">
-    <div class="comment_title"><%= link_to book_comment.user.name, book_comment.user %></div>
+<div id="<%= dom_id book_comment %>" class="comment-box">
+  <div class="comment-box-header">  
+    <h2>
+      <%= link_to book_comment.user.name, book_comment.user %>
+    </h2>
     <time><%= book_comment.created_at.strftime(t('time.formats.long')) %></time>
-  </header>
-
-  <div class="comment_description">
-    <p><%= book_comment.content %></p>
   </div>
+  <div class="comment-box-main">
+      <p><%= safe_join(book_comment.content.split("\n"),tag(:br)) %></p>
+  </div>
+  <% if current_user == book_comment.user %>
+    <div class="comment-box-footer">
+        <%= link_to t('views.common.edit', name: i18n_pluralize(BookComment.model_name.human.downcase)), edit_book_comment_path(book_comment, book_id:book_comment.book.id) %>
+        <%= button_to t('views.common.destroy', name: BookComment.model_name.human.downcase), book_comment, method: :delete %>
+    </div>
+  <% end %>
+
 </div>
