--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,12 +6,13 @@
 <nav class="page-nav">
   <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_book_path(@book) %> |
   <%= link_to t('views.common.back', name: i18n_pluralize(Book.model_name.human.downcase)), books_path %>
-  <%= link_to t('views.common.new', name: BookComment.model_name.human.downcase), new_book_comment_path(book_id:@book.id) %>
-
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
 
 <div id="book_comments">
+<h2><%= BookComment.model_name.human %></h2>
+  <%= link_to t('views.common.new', name: BookComment.model_name.human.downcase), new_book_comment_path(book_id:@book.id) %>
+
   <% @book.book_comment.each do |book_comment| %>
     <%= render book_comment %>
   <% end %>
