--- a/app/views/report_comments/_report_comment.html.erb
+++ b/app/views/report_comments/_report_comment.html.erb
@@ -1,6 +1,9 @@
 <div id="<%= dom_id report_comment %>" class="comment-box">
   <div class="comment-box-header">  
     <h2>
+      <% if report_comment.user.name.empty? %>
+        <%= link_to report_comment.user.email, report_comment.user %>
+      <% end %>
       <%= link_to report_comment.user.name, report_comment.user %>
     </h2>
     <time><%= report_comment.created_at.strftime(t('time.formats.long')) %></time>
